mini-link-gateway/src/main/resources/k8s/deployment-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-link-gateway-deployment
  namespace: mini-link-namespace
  labels:
    app: mini-link-gateway-label
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mini-link-gateway-label
  template:
    metadata:
      labels:
        app: mini-link-gateway-label
    spec:
      containers:
        - name: mini-link-gateway
          image: 镜像仓库内网IP:9999/minilink/mini-link-gateway:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          resources:
            requests:
              memory: 300Mi
              cpu: 200m
            limits:
              memory: 500Mi
              cpu: 400m
